--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,13 @@
 <resources>
     <string name="app_name">Carpool Buddy</string>
-    <string-array name="numbers">
+    <string-array name="roles">
         <item>Parent</item>
         <item>Student</item>
         <item>Teacher</item>
         <item>Alumni</item>
     </string-array>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="carTypes">
+        <item>FossilFuelVehicle</item>
+        <item>ElectricVehicle</item>
+    </string-array>
 </resources>
