--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,11 @@
         <item>Alumni</item>
     </string-array>
     <string-array name="carTypes">
-        <item>FossilFuelVehicle</item>
-        <item>ElectricVehicle</item>
+        <item>FossilFuelCar</item>
+        <item>ElectricCar</item>
+        <item>Helicopter</item>
+        <item>Segway</item>
+        <item>Bicycle</item>
     </string-array>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="title_activity_maps2">MapsActivity2</string>
